# WayCollect

./: .gitignore  CLAUDE.md  FAQ-draft.txt  LICENSE  README.md  SECURITY-OVERVIEW.md  TERMS-draft.md  package-lock.json  package.json
.github/workflows/: build.yml  check.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: build-faq.py  build-terms.py  check-frontend.py
