[package]
name = "watch-register"
version = "1.28.0"
description = "Local-first, air-gapped asset & provenance register"
authors = ["WayeCollect Software LLC <bradwaye@gmail.com>"]
edition = "2021"
homepage = "https://github.com/bwaye3/WayCollect"
repository = "https://github.com/bwaye3/WayCollect"
license-file = "../LICENSE"

[lib]
name = "watch_register_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
